--- a/DrSiwoz/app/build.gradle
+++ b/DrSiwoz/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
