--- a/DrSiwoz/app/src/main/AndroidManifest.xml
+++ b/DrSiwoz/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
         </activity>
         <activity
             android:name=".LoginActivity"
