--- a/DrSiwoz/app/build.gradle
+++ b/DrSiwoz/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+
+    compile 'com.journeyapps:zxing-android-embedded:3.0.2@aar'
+    compile 'com.google.zxing:core:3.2.0'
 }
